# Yggdrasil

./: .gitignore  .pre-commit-config.yaml  .yggdrasil_state.json  404.html  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  LILITH_README.md  LILITH_ROADMAP.md  LILITH_TOOLS.md  MEJORAS_CLI.md  MEJORAS_FINALES.md  README.md  REGLAS_YGGDRASIL.md  SECURITY.md  advanced_memory.py  agent_permissions.json  agent_permissions.py  architecture_report.json  auto_improvement.py  health-check.py  health_check.py  index.html  inicializar_yggdrasil.sh  install.bat  lilith_agent.py  lilith_cli.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  setup.bat  setup.sh  setup_yggdrasil.py  sitemap.xml  (+23 more)
Alfheim/TerminalDashboard/: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
Alfheim/TerminalDashboard/tests/: __init__.py  conftest.py  test_actions.py  test_app.py  test_cli.py  test_git_utils.py  test_health.py  test_realm_view.py  test_realm_view_helpers.py  test_scanner.py  test_sidebar_filter.py  test_updater.py
Alfheim/TerminalDashboard/tui/: __init__.py  __main__.py  actions.py  app.py  cli.py  git_utils.py  health.py  scanner.py  styles.tcss  updater.py
Alfheim/YggdrasilForge/: .env.example  .gitignore  README.md  pyproject.toml  start.sh
Alfheim/YggdrasilForge/backend/: __init__.py  blender_client.py  config.py  database.py  main.py  models.py
Alfheim/YggdrasilForge/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
Alfheim/YggdrasilForge/tests/: conftest.py  test_api.py  test_assets_routes.py  test_blender_routes.py
Alfheim/dashboard/: README.md  __init__.py  pyproject.toml
Alfheim/dashboard/alfheim/: __init__.py
Asgard/Lilith/: .env.example  .gitignore  LEGACY.md  LILITH.bat  README.md  README_LAUNCHER.md  pyproject.toml  run_lilith_dev.bat
Asgard/Lilith/.claude/: settings.local.json
Asgard/Lilith/Core/: ,  .gitignore  README.md  gauntlet.bat  launch_lilith.bat  requirements.txt  smoke_test_report_v5.0.json  smoke_tests_v5.0.py  start_server.py  test_pc_list.bat  test_pc_list_manual.py
Asgard/Lilith/Data/: attention_stack.db  decision_audit_2026-03-16.jsonl  decision_audit_2026-03-17.jsonl  decision_audit_2026-03-18.jsonl  decision_audit_2026-03-19.jsonl  decision_audit_2026-03-20.jsonl  decision_audit_2026-03-21.jsonl  decision_audit_2026-03-23.jsonl  decision_audit_legacy.jsonl  discord_audit.jsonl  discord_notes.json  episodic_log.jsonl  ingest_state.json  last_plan_by_user.json  lilith_notebook.jsonl  matching_learning.jsonl  monitor_snapshots.json  muninn_edges.jsonl  pc_agent_audit.jsonl  personality_modes.db  proactive_state.json  session_summaries.jsonl  session_summary_state.json  source_monitor_state.json  telegram_heartbeat.txt  telegram_state.json
Asgard/Lilith/scripts/: lilith_cli.py  start_api.bat  start_api.py  start_dashboard.bat  start_discord.bat  start_telegram.bat
Asgard/Lilith/src/: README.md  context_enricher.py  core_pid.txt  fix_unicode.bat  initialize_all_systems.py  main.py  metrics_collector.py  run_tests.py
Asgard/lilith-api/: README.md  pyproject.toml  run.py
Asgard/lilith-api/lilith_api/: __init__.py  main.py
Asgard/lilith-api/tests/: __init__.py  conftest.py  test_api.py
Asgard/lilith-bridge/: README.md  pyproject.toml
Asgard/lilith-bridge/lilith_bridge/: __init__.py  __main__.py  app.py  bifrost_integration.py  config.py  hermes_client.py  models.py
Asgard/lilith-bridge/tests/: __init__.py  test_bridge.py  test_hermes_client.py
Asgard/lilith-cli/: README.md  pyproject.toml
Asgard/lilith-cli/lilith_cli/: __init__.py  agent.py  client.py  commands.py  config.py  main.py  providers.py  render.py  repl.py
Asgard/lilith-cli/tests/: __init__.py  conftest.py  test_cli.py
Asgard/lilith-core/: README.md  pyproject.toml
Asgard/lilith-core/lilith_core/: __init__.py  config.py  exceptions.py  logger.py  providers.py  types.py
Asgard/lilith-core/tests/: __init__.py  test_config.py  test_litellm_provider.py  test_local_provider.py
Asgard/lilith-memory/: README.md  pyproject.toml
Asgard/lilith-memory/lilith_memory/: __init__.py  consolidation.py  store.py
Asgard/lilith-memory/tests/: __init__.py  test_mem0_backend.py  test_memory.py  test_sqlite_backend.py
Asgard/lilith-orchestrator/: README.md  engine.py  pyproject.toml
Asgard/lilith-orchestrator/gateway/: __init__.py  gateway.py  requirements.txt  run.py  start_gateway.bat
Asgard/lilith-orchestrator/lilith_orchestrator/: __init__.py  engine.py
Asgard/lilith-orchestrator/tests/: __init__.py  conftest.py  test_engine.py  test_gateway.py  test_run.py
Asgard/lilith-skills/: README.md  pyproject.toml
Asgard/lilith-skills/lilith_skills/: __init__.py  context.py  loader.py  models.py  registry.py
Asgard/lilith-skills/tests/: __init__.py  test_context.py  test_loader.py  test_skills.py
Asgard/lilith-tools/: README.md  pyproject.toml
Asgard/lilith-tools/lilith_tools/: __init__.py  base.py  browser.py  coding.py  filesystem.py  registry.py  system.py  web_search.py
Asgard/lilith-tools/tests/: __init__.py  test_router.py  test_tools.py  test_tools_extra.py
Muspelheim/AutoSub/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
Muspelheim/AutoSub/autosub/: __init__.py  aligner.py  batch.py  cli.py  config.py  exporter.py  pipeline.py  transcriber.py  translator.py
Muspelheim/AutoSub/tests/: __init__.py  test_aligner.py  test_batch.py  test_cli.py  test_config.py  test_exporter.py  test_integration.py  test_pipeline.py  test_transcriber.py  test_translator.py
Muspelheim/ForgeMaster/: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
Muspelheim/Horror-GameMaster/: Dockerfile  README.md  ROADMAP.md  __main__.py  pyproject.toml
Niflheim/ForgeMaster/: .gitignore  README.md  pyproject.toml
Vanaheim/bifrost/: README.md  README_BIFROST.md  __init__.py  auth.py  gateway.py  pyproject.toml
Vanaheim/gamemaster-mcp-server/: README.md  pyproject.toml
Vanaheim/vanaheim-framework/: README.md  pyproject.toml
(+1763 files in other folders)
