# ============================================================================
# Yggdrasil Monorepo – Root Configuration
# ============================================================================
# This is the workspace root.  All sub-packages are managed via
# `uv.workspace.members` and resolved as editable installs automatically.

[project]
name = "yggdrasil"
version = "5.1.0"
description = "Yggdrasil – Norse-themed AI agent ecosystem"
requires-python = ">=3.11"
license = {text = "MIT"}

# No runtime dependencies at the root level – everything lives in the
# individual workspace packages.  Dev-only dependencies are listed below.

[project.optional-dependencies]
dev = [
    "poethepoet>=0.25",
    "ruff>=0.15.13",
    "pytest>=8.0",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.27",
]

# ---------------------------------------------------------------------------
# uv workspace
# ---------------------------------------------------------------------------

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.27",
]

[tool.uv.workspace]
members = [
    "Asgard/lilith-core",
    "Asgard/lilith-memory",
    "Asgard/lilith-tools",
    "Asgard/lilith-orchestrator",
    "Asgard/lilith-api",
    "Asgard/lilith-cli",
    "Asgard/lilith-skills",
    "Asgard/lilith-bridge",
    "Alfheim/dashboard",
    "Alfheim/TerminalDashboard",
    "Alfheim/YggdrasilForge",
    "Muspelheim/AutoSub",
    "Muspelheim/ForgeMaster",
    "Vanaheim/bifrost",
    "Vanaheim/vanaheim-framework",
]

[tool.uv.extra-build-dependencies]
hatchling = ["hatchling"]

[tool.uv.sources]
# Workspace packages reference each other via editable installs.
# When a sub-package depends on another workspace member (e.g.
# lilith-tools depends on lilith-core), uv resolves it from the
# local workspace automatically – no need to publish to PyPI first.
lilith-core = { workspace = true }
lilith-memory = { workspace = true }
lilith-tools = { workspace = true }
lilith-orchestrator = { workspace = true }
lilith-api = { workspace = true }
lilith-cli = { workspace = true }
lilith-skills = { workspace = true }
lilith-bridge = { workspace = true }
bifrost = { workspace = true }

# ---------------------------------------------------------------------------
# poethepoet task runner
# ---------------------------------------------------------------------------

[tool.poe.tasks]

test = {cmd = "pytest", help = "Run pytest for all workspace packages"}
lint = {cmd = "ruff check .", help = "Run ruff linter on the entire monorepo"}
format = {cmd = "ruff format .", help = "Run ruff formatter on the entire monorepo"}

dashboard = {cmd = "uvicorn alfheim.dashboard.app:create_app --factory --port 8000 --reload", help = "Start the Alfheim HTMX dashboard server"}
tui = {cmd = "python -m lilith_cli.tui.app", help = "Start the Yggdrasil TUI dashboard"}
api = {cmd = "python -m lilith_api", help = "Start the Lilith REST API server"}
bridge = {cmd = "lilith-bridge", help = "Start the Hermes Bridge gateway (Yggdrasil <-> Hermes)"}

clean = {cmd = "python scripts/clean.py", help = "Remove __pycache__, .pyc, .pytest_cache, .ruff_cache, *.egg-info"}

# ---------------------------------------------------------------------------
# ruff – delegates to the standalone ruff.toml at repo root
# ---------------------------------------------------------------------------

[tool.ruff]
# Ruff reads ruff.toml automatically when it is in the project root.
# We keep the full configuration there so this section only needs to
# exist to confirm ruff is a project-level tool.
# See: ruff.toml (adjacent to this file)

# ---------------------------------------------------------------------------
# pytest – root-level overrides
# ---------------------------------------------------------------------------
# The existing pytest.ini at repo root already defines testpaths and
# markers.  When the workspace is fully migrated we can consolidate
# that config here, but for now pytest.ini remains authoritative and
# both formats coexist without conflict.
