[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lilith-agent"
version = "4.0.0"
description = "Dark Goddess of Yggdrasil Digital — Full coding CLI agent with memory, skills, and autonomous thinking."
readme = "LILITH_README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "BrierStudios"}]
keywords = ["ai", "agent", "coding", "cli", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "requests>=2.28",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-xdist",
    "ruff",
    "pyright",
    "mypy",
]

[project.scripts]
lilith = "lilith_agent:main"
ygg-lilith = "lilith_agent:main"

[project.urls]
Homepage = "https://github.com/BrierStudios/lilith-agent"
Documentation = "https://github.com/BrierStudios/lilith-agent/blob/main/LILITH_README.md"
Repository = "https://github.com/BrierStudios/lilith-agent"
Issues = "https://github.com/BrierStudios/lilith-agent/issues"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
