[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terminaldashboard"
version = "1.0.0"
description = "Yggdrasil Terminal Dashboard – TUI for monitoring all realms"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=2.0",
    "rich>=13.0",
    "psutil>=5.9",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-textual-snapshot>=0.1",
    "pytest-cov>=4.0",
]

[project.scripts]
yggdrasil-dashboard = "tui.cli:app"

[tool.setuptools.packages.find]
include = ["tui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "--cov=tui --cov-report=term-missing --cov-fail-under=70"
