[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alfheim-dashboard"
version = "1.0.0"
description = "HTMX + Alpine.js + Jinja2 dashboard for Yggdrasil ecosystem"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Yggdrasil Team"},
]

dependencies = [
    "fastapi>=0.110.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "uvicorn>=0.27.0",
    "sse-starlette>=1.6.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27.0",
]

[project.scripts]
alfheim-dashboard = "alfheim.dashboard.app:create_app"

[tool.setuptools.packages.find]
where = ["."]
include = ["alfheim*"]

[tool.setuptools.package-data]
"alfheim.dashboard" = ["templates/*.html", "static/**/*"]
