[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lilith"
version = "5.0.0"
description = "Lilith - Orquestadora Soberana de Asgard"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "bots*", "scripts*"]

[tool.setuptools.package-dir]
"" = "."
