[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lilith-api"
version = "2.2.0"
description = "FastAPI Gateway with WebSocket support"
requires-python = ">=3.11"
license = "MIT"
dependencies = ["lilith-core", "lilith-orchestrator", "fastapi", "uvicorn"]

[project.urls]
Repository = "https://github.com/BrierAinz/Yggdrasil"
