[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lilith-cli"
version = "2.0.0"
description = "CLI entry point for Lilith v2.0"
requires-python = ">=3.9"
dependencies = [
    "lilith-core>=2.0.0",
    "lilith-memory>=2.0.0",
    "lilith-orchestrator>=2.0.0",
    "lilith-tools>=2.0.0",
    "textual>=0.50.0",
]

[project.scripts]
lilith = "lilith_cli.main:main"
yggdrasil-tui = "lilith_cli.tui.app:main"
