[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lilith-cli"
version = "2.1.0"
description = "CLI entry point for Lilith v2"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "lilith-core>=2.0.0",
    "lilith-memory>=2.0.0",
    "lilith-orchestrator>=2.0.0",
    "lilith-tools>=2.0.0",
    "textual>=0.50.0",
]

[project.scripts]
lilith = "lilith_cli.main:main"
yggdrasil-tui = "lilith_cli.tui.app:main"

[project.urls]
Homepage = "https://github.com/BrierAinz/Yggdrasil"
Repository = "https://github.com/BrierAinz/Yggdrasil/tree/main/Asgard/lilith-cli"

[tool.uv.sources]
lilith-core = { workspace = true }
lilith-memory = { workspace = true }
lilith-tools = { workspace = true }
lilith-orchestrator = { workspace = true }
