[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lilith-cli"
version = "3.0.0"
description = "Terminal interface for Lilith ecosystem"
requires-python = ">=3.11"
license = "MIT"
dependencies = ["lilith-core", "lilith-api", "rich", "cyclopts"]

[project.urls]
Repository = "https://github.com/BrierAinz/Yggdrasil"
