[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lilith-core"
version = "2.0.0"
description = "Core engine for the Lilith AI agent"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black", "isort", "mypy"]

[project.urls]
Homepage = "https://github.com/BrierAinz/Yggdrasil"
Repository = "https://github.com/BrierAinz/Yggdrasil/tree/main/Asgard/lilith-core"
