[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lilith-memory"
version = "2.0.0"
description = "Memory system for Lilith AI agent"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
mem0 = ["mem0ai>=0.1"]

[project.urls]
Homepage = "https://github.com/BrierAinz/Yggdrasil"
Repository = "https://github.com/BrierAinz/Yggdrasil/tree/main/Asgard/lilith-memory"
