[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lilith-memory"
version = "1.0.0"
description = "Vector memory store with SQLite backend"
requires-python = ">=3.11"
license = "MIT"
dependencies = ["lilith-core", "numpy"]

[project.urls]
Repository = "https://github.com/BrierAinz/Yggdrasil"
