[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lilith-orchestrator"
version = "1.0.0"
description = "Agent coordination and task orchestration"
requires-python = ">=3.11"
license = "MIT"
dependencies = ["lilith-core", "lilith-memory", "lilith-tools"]

[project.urls]
Repository = "https://github.com/BrierAinz/Yggdrasil"
