[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lilith-skills"
version = "1.0.0"
description = "Skill loader and registry for the Yggdrasil knowledge base"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black", "isort", "mypy"]

[project.urls]
Homepage = "https://github.com/BrierAinz/Yggdrasil"
Repository = "https://github.com/BrierAinz/Yggdrasil/tree/main/Asgard/lilith-skills"
