[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lilith-skills"
version = "1.0.0"
description = "Skill management and discovery for Lilith"
requires-python = ">=3.11"
license = "MIT"
dependencies = ["lilith-core"]

[project.urls]
Repository = "https://github.com/BrierAinz/Yggdrasil"
