[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lilith-tools"
version = "1.0.0"
description = "PC control, browser automation, RAG tools"
requires-python = ">=3.11"
license = "MIT"
dependencies = ["lilith-core", "lilith-memory", "requests"]

[project.urls]
Repository = "https://github.com/BrierAinz/Yggdrasil"
