[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forgemaster"
version = "1.0.0"
description = "Muspelheim resource manager — LLM models, VRAM, disk usage"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Yggdrasil Team"},
]

dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "psutil>=5.9",
    "httpx>=0.25",
    "safetensors>=0.4",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "mypy>=1.0"]

[project.urls]
Homepage = "https://github.com/BrierAinz/Yggdrasil"
Repository = "https://github.com/BrierAinz/Yggdrasil/tree/main/Muspelheim/ForgeMaster"

[project.scripts]
forgemaster = "forgemaster.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["forgemaster"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
