[project]
name = "forgemaster"
version = "0.1.0"
description = "Niflheim resource manager — LLM models, VRAM, disk usage"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "psutil>=5.9",
    "httpx>=0.25",
    "safetensors>=0.4",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
forgemaster = "forgemaster.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
