[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bifrost"
version = "2.0.0"
description = "Bifrost bridge - inter-realm communication for Yggdrasil"
requires-python = ">=3.11"
license = "MIT"
dependencies = ["lilith-core"]

[project.urls]
Repository = "https://github.com/BrierAinz/Yggdrasil"
