[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gamemaster-mcp-server"
version = "0.1.0"
description = "GameMaster Agent — AI character creation MCP server for Caveduck, Tipsy Chat, and similar platforms. Part of Yggdrasil ecosystem."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Yggdrasil Team"},
]

dependencies = [
    "fastmcp>=3.3.0",
    "pydantic>=2.0",
    "pydantic-ai>=1.97.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gamemaster_mcp"]

[project.scripts]
gamemaster-mcp-server = "gamemaster_mcp.server:mcp"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]
