[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vanaheim-framework"
version = "1.0.0"
description = "AI agent framework for Yggdrasil"
requires-python = ">=3.11"
license = "MIT"
dependencies = ["lilith-core"]

[project.urls]
Repository = "https://github.com/BrierAinz/Yggdrasil"
